tests/parser/validinput/empty_construced.idp
vocabulary V{
	type T constructed from {}
}

theory T:V{
}

structure S:V{

}

procedure main(){
	print(S)
}
